add class 03 functions

--- a/JavaScript/Class-03-functions/challenges/index.html
+++ b/JavaScript/Class-03-functions/challenges/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./1-convert-ms-kmh.js"></script>
+    <script src="./2-imc-calculator.js"></script>
 </body>
 </html>
