add class 03 try catch

--- a/JavaScript/Class-05-conditionals/index.html
+++ b/JavaScript/Class-05-conditionals/index.html
@@ -6,6 +6,6 @@
     <title>Class 05 Conditionals</title>
 </head>
 <body>
-    <script src="challenge/2-everage-abc.js"></script>
+    <script src="challenge/3-convert-temperature.js"></script>
 </body>
 </html>
