--- a/JavaScript/Class-06-loops/index.html
+++ b/JavaScript/Class-06-loops/index.html
@@ -6,6 +6,6 @@
     <title>Class 06 loops</title>
 </head>
 <body>
-    <script src="2-for.js"></script>
+    <script src="Challenger/2-mega-sena.js"></script>
 </body>
 </html>
