add class inherit and challeng

--- a/JavaScript/Class-10-oop/index.html
+++ b/JavaScript/Class-10-oop/index.html
@@ -10,7 +10,7 @@
     <button class="button-upper">+</button>
     <button class="button-lower">-</button>
 
-    <script src="1-class.js"></script>
+    <script src="/JavaScript/Class-10-oop/challenges/1-Class.js"></script>
    
 </body>
 </html>
